# eastern_eye

./: .gitignore  .gitmodules  CMakeLists.txt  project_dump.txt  start_virtual_video.txt  todo.txt
include/: board_analyzer.hpp  board_detector.hpp  board_tracker.hpp  config_manager.hpp  dashboard_server.hpp  inspection_system.hpp  main_ui.hpp  system_configuration.hpp  types.hpp
res/: index.html
src/: board_analyzer.cpp  board_detector.cpp  board_tracker.cpp  dashboard_server.cpp  inspection_system.cpp  main.cpp  main_ui.cpp
